# ccg-gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  build.bat  dev.bat  docker-compose.yml
.github/workflows/: dockerhub-publish.yml  sync-upstream.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  proxy.py
backend/app/api/v1/: logs.py  settings.py  stats.py
backend/app/core/: config.py  database.py
backend/app/models/: log_models.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: backup_service.py  cli_config_manager.py  cli_sync_service.py  log_service.py  provider_service.py  proxy_service.py  routing_service.py  session_service.py  settings_service.py  stats_service.py
desktop/: __init__.py  ccg-gateway.spec  main.py  tray.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: components.d.ts  main.ts
frontend/src/api/: backup.ts  logs.ts  mcp.ts  prompts.ts  providers.ts  sessions.ts  settings.ts  stats.ts  tauri-bridge.ts
frontend/src/components/: DatabaseMigrationDialog.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: sessions.ts
frontend/src/types/: models.ts
frontend/src/views/config/: index.vue
frontend/src/views/config/components/: CliSettingsForm.vue
frontend/src/views/dashboard/: index.vue
frontend/src/views/logs/: index.vue
frontend/src/views/mcp/: index.vue
frontend/src/views/prompts/: index.vue
frontend/src/views/sessions/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/api/: handlers.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs  schema_definition.rs  schema_diff.rs  schema_inspector.rs  schema_migrator.rs
src-tauri/src/services/: mod.rs  provider.rs  proxy.rs  routing.rs  stats.rs
