[project]
name = "ccg-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "webdavclient3>=3.14.6",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19",
    "pillow>=10.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
